--- a/style.css
+++ b/style.css
@@ -1,417 +1,428 @@
-.text-gray {
-		color: #cbc3b0;
-}
+.text-gray {color: #cbc3b0;}
 
 .no-data {
-		margin-top: 5px;
-		color: gray;
-		text-align: center;
-		font-style: italic;
+  margin-top: 5px;
+  color: gray;
+  text-align: center;
+  font-style: italic;
 }
 
 body {
-	font-family: 'Inter', sans-serif;
-	margin: 0;
-	padding: 0;
-	background-color: #f5f5f5;
+  font-family: 'Inter', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f5f5f5;
 }
 
 .header {
-	position: fixed;
-	top: 0;
-	width: 100%;
-	height: 50px;
-	background-color: #399918;
-	display: flex;
-	align-items: center;
-	/* Căn giữa dọc nội dung */
-	justify-content: flex-start;
-	/* Nội dung căn trái */
-	padding-left: 20px;
-	/* Khoảng cách bên trái */
-	z-index: 100;
-	box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 50px;
+  background-color: #399918;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding-left: 20px;
+  z-index: 100;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .header-title img {
-	height: 30px;
-	width: auto;
-	margin-top: -4px;
-	margin-left: -10px;
-	object-fit: contain;
-	display: flex;
-	justify-content: left;
-	align-items: center;
+  height: 30px;
+  width: auto;
+  margin-top: -4px;
+  margin-left: -10px;
+  object-fit: contain;
+  display: flex;
+  justify-content: left;
+  align-items: center;
 }
 
 .compact-title {
-		font-size: 1.5em; /* Kích thước tương tự h2 */
-		font-weight: bold;
-		margin: 10px 0; /* Thay đổi khoảng cách trên và dưới */
-		padding: 5px 0; /* Giảm padding trên và dưới */
-		line-height: 1.2; /* Tăng hoặc giảm dòng cách nhau nếu cần */
-		color: #213555; /* Giữ nguyên màu sắc của văn bản */
+  font-size: 1.5em;
+  font-weight: bold;
+  margin: 10px 0;
+  padding: 5px 0;
+  line-height: 1.2;
+  color: #213555;
 }
 
 /* Tùy chỉnh hover cho ngày -----------------------------------*/
 .flatpickr-day:hover {
-		background: #cbd2ce; /* Màu nền khi hover */
-		font-weight: bold;
+  background: #cbd2ce;
+  font-weight: bold;
 }
-/* ------------------------------------------------------- */
+
 /*Box hiển thị BMI/Age ZScore---------------*/
 fieldset {
-	width: 300px;
-	margin: 0 0 1rem 0;
-	padding: 0 0 .2rem 0;
+  width: 300px;
+  margin: 0 0 1rem 0;
+  padding: 0 0 .2rem 0;
 }
 
 legend {
-	margin: 0 0 0 1em;
-	color: #1B417D;
-	font-weight: bold;
+  margin: 0 0 0 1em;
+  color: #1B417D;
+  font-weight: bold;
 }
 
 fieldset ol {
-	padding: 0 1em;
-	margin: 0;
-	list-style: none;
+  padding: 0 1em;
+  margin: 0;
+  list-style: none;
 }
 
 /*---------------------------------------*/
 .container_date_input {
-	display: flex;
-	flex-direction: column;
-	gap: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .age-method-container {
-	display: flex;
-	align-items: center;
-	gap: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .input-row {
-	display: flex;
-	gap: 20px;
+  display: flex;
+  gap: 20px;
 }
 
 .field_date_input {
-	flex: 1;
-	display: flex;
-	flex-direction: column;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .field_date_input {
-	flex: 1;
-	display: flex;
-	flex-direction: column;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .icon-container {
-	justify-content: left;
-	align-items: center;
-	display: inline-block;
-	padding: 5px;
-	cursor: pointer;
-	position: relative;
+  justify-content: left;
+  align-items: center;
+  display: inline-block;
+  padding: 5px;
+  cursor: pointer;
+  position: relative;
 }
 
 .icon-container:hover {
-	border: 0px solid rgba(0, 0, 0, 0.2);
-	border-radius: 6px;
-	/* Bo tròn góc */
-	background-color: rgba(0, 0, 0, 0.05);
+  border: 0px solid rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
+  /* Bo tròn góc */
+  background-color: rgba(0, 0, 0, 0.05);
 }
 
 .header-icon {
-	width: 30px;
-	height: 30px;
+  width: 30px;
+  height: 30px;
 }
 
 .tooltip-text {
-	visibility: hidden;
-	width: 110px;
-	background-color: black;
-	color: #fff;
-	text-align: center;
-	border-radius: 5px;
-	padding: 5px;
-	position: absolute;
-	z-index: 1;
-	top: 125%;
-	left: 130%;
-	transform: translateX(-50%);
-	opacity: 0;
-	transition: opacity 0.3s;
+  visibility: hidden;
+  width: 110px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 5px;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  top: 125%;
+  left: 130%;
+  transform: translateX(-50%);
+  opacity: 0;
+  transition: opacity 0.3s;
 }
 
 img {
-	max-width: 100%;
-	height: auto;
-	display: block;
-	margin: 0 auto;
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
 }
 
 label {
-	font-weight: bold;
+  font-weight: bold;
 }
 
 /* Khi sidebar mở, tooltip hiển thị bên phải */
 .sidebar-open .tooltip-text {
-	top: 50%;
-	left: 110%;
-	/* Hiển thị về bên phải */
-	transform: translateY(-50%);
+  top: 50%;
+  left: 110%;
+  /* Hiển thị về bên phải */
+  transform: translateY(-50%);
 }
 
 .icon-container:hover .tooltip-text {
-	visibility: visible;
-	opacity: 1;
+  visibility: visible;
+  opacity: 1;
 }
 
 #main {
-	margin-top: 60px;
-	transition: margin-left 0.5s;
-	padding: 20px;
+  margin-top: 60px;
+  transition: margin-left 0.5s;
+  padding: 20px;
 }
 
 .sidebar {
-	height: calc(100% - 50px);
-	width: 0;
-	position: fixed;
-	top: 50px;
-	left: 0;
-	background-color: #042331;
-	overflow-x: hidden;
-	transition: 0.5s;
-	padding-top: 20px;
-	z-index: 200;
+  height: calc(100% - 50px);
+  width: 0;
+  position: fixed;
+  top: 50px;
+  left: 0;
+  background-color: #042331;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 20px;
+  z-index: 200;
 }
 
 .sidebar a {
-	padding: 10px 15px;
-	text-decoration: none;
-	font-size: 18px;
-	color: white;
-	display: block;
-	transition: 0.3s;
+  padding: 10px 15px;
+  text-decoration: none;
+  font-size: 18px;
+  color: white;
+  display: block;
+  transition: 0.3s;
 }
 
 .sidebar a:hover {
-	background-color: #575757;
-	padding-left: 25px;
+  background-color: #575757;
+  padding-left: 25px;
 }
 
 .sidebar a.selected {
-	background-color: #708871;
-	color: white;
-	font-weight: bold;
+  background-color: #708871;
+  color: white;
+  font-weight: bold;
 }
 
 .close-btn:hover {
-	color: red;
+  color: red;
 }
 
 .container {
-	max-width: 400px;
-	margin: auto;
-	padding: 20px;
-	background-color: white;
-	border-radius: 8px;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  margin: auto;
+  padding: 20px;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .container_of_content {
-	display: flex;
-	justify-content: center;
-	align-items: flex-start;
-	gap: 20px;
-	margin: 0 auto;
-	max-width: 1200px;
-	padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 20px;
+  margin: 0 auto;
+  max-width: 1200px;
+  padding: 20px;
 }
 
 .collapsible-header {
-		display: flex;
-		justify-content: flex-start;
-		align-items: center;
-		padding: 0px 10px;
-		font-weight: bold;
-		cursor: pointer;
-		border-bottom: 1px solid #213555; /* Đường border dưới */
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0px 10px;
+  font-weight: bold;
+  cursor: pointer;
+  border-bottom: 1px solid #213555;
+  /* Đường border dưới */
 }
 
 .arrow-icon {
-	width: 28px;
-	height: 28px;
-	margin: -10px 10px;
-	transition: transform 0.3s ease; /* Hiệu ứng xoay */
+  width: 28px;
+  height: 28px;
+  margin: -10px 10px;
+  transition: transform 0.3s ease;
+  /* Hiệu ứng xoay */
 }
 
 .arrow-icon.expanded {
-	transform: rotate(180deg); /* Xoay 180 độ khi expanded */
+  transform: rotate(180deg);
+  /* Xoay 180 độ khi expanded */
 }
 
 
 /* Nội dung collapsible (ẩn ban đầu) */
 .collapsible-content {
-	max-height: 0; /* Chiều cao ban đầu là 0 */
-	overflow: hidden; /* Ẩn phần nội dung vượt quá max-height */
-	transition: max-height 0.4s ease-out, padding 0.4s ease-out; /* Hiệu ứng mượt mà */
-	padding: 0 15px; /* Thêm padding nhưng không hiển thị khi collapsed */
+  max-height: 0;
+  /* Chiều cao ban đầu là 0 */
+  overflow: hidden;
+  /* Ẩn phần nội dung vượt quá max-height */
+  transition: max-height 0.4s ease-out, padding 0.4s ease-out;
+  /* Hiệu ứng mượt mà */
+  padding: 0 15px;
+  /* Thêm padding nhưng không hiển thị khi collapsed */
 }
 
 .box-content {
-	padding: 0 15px;
-	margin: 0 auto;
-	max-width: 1100px;
-	padding: 10px;
-	line-height: 1.6;
-	text-align: justify;
+  padding: 0 15px;
+  margin: 0 auto;
+  max-width: 1100px;
+  line-height: 1.6;
+  text-align: justify;
 }
+
 /* Nội dung được mở rộng */
 .collapsible-content.expand {
-	padding: 15px; /* Hiển thị padding khi mở rộng */
+  padding: 15px;
+  /* Hiển thị padding khi mở rộng */
 }
 
 .result-box-zscore {
-	max-width: 700px;
-	flex: 1;
-	padding: 5px;
-	background-color: #ffffff;
-	line-height: 1.6;
-	text-align: justify;
+  max-width: 700px;
+  flex: 1;
+  padding: 5px;
+  background-color: #ffffff;
+  line-height: 1.6;
+  text-align: justify;
 }
 
 .description-box {
-	max-width: 700px;
-	flex: 1;
-	background-color: #f8f9fa;
-	padding: 20px;
-	border-radius: 10px;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-	line-height: 1.6;
-	/* Dãn cách dòng */
-	text-align: justify;
+  max-width: 700px;
+  flex: 1;
+  background-color: #f8f9fa;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  line-height: 1.6;
+  /* Dãn cách dòng */
+  text-align: justify;
 }
 
 .calculation-box {
-	max-width: 350px;
-	flex: 1;
-	background-color: #ffffff;
-	padding: 20px;
-	border-radius: 10px;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-	display: flex;
-	flex-direction: column;
+  max-width: 350px;
+  flex: 1;
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
 }
 
 input {
-	width: calc(100% - 20px);
-	margin: 10px 0;
-	padding: 10px;
-	margin: 10px 0;
-	font-size: 16px;
+  width: calc(100% - 20px);
+  margin: 10px 0;
+  padding: 10px;
+  font-size: 16px;
 }
 
 button {
-	padding: 10px 20px;
-	/* Khoảng trống theo chiều ngang và chiều dọc */
-	background-color: #4CAF50;
-	color: white;
-	border: none;
-	cursor: pointer;
-	font-size: 16px;
-	display: block;
-	margin: 0 auto;
+  padding: 10px 20px;
+  /* Khoảng trống theo chiều ngang và chiều dọc */
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  display: block;
+  margin: 0 auto;
 }
 
 button:hover {
-	background-color: #45a049;
+  background-color: #45a049;
 }
 
 /* Áp dụng cho nút bị vô hiệu hóa */
 button:disabled {
-		opacity: 0.6; /* Làm mờ nút */
-		cursor: not-allowed; /* Con trỏ dạng không cho phép */
-		position: relative; /* Đảm bảo overlay hoạt động */
+  opacity: 0.6;
+  /* Làm mờ nút */
+  cursor: not-allowed;
+  /* Con trỏ dạng không cho phép */
+  position: relative;
+  /* Đảm bảo overlay hoạt động */
 }
 
 /* Thêm overlay màu xám cho nút bị vô hiệu hóa */
 button:disabled::after {
-		content: ""; /* Overlay không có nội dung */
-		position: absolute; /* Định vị overlay */
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		background-color: rgb(87 87 87 / 30%); /* Màu xám nhạt với độ mờ */
-		z-index: 1; /* Hiển thị lớp phủ lên trên */
-		border-radius: inherit; /* Đảm bảo bo góc giống nút */
+  content: "";
+  /* Overlay không có nội dung */
+  position: absolute;
+  /* Định vị overlay */
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgb(87 87 87 / 30%);
+  /* Màu xám nhạt với độ mờ */
+  z-index: 1;
+  /* Hiển thị lớp phủ lên trên */
+  border-radius: inherit;
+  /* Đảm bảo bo góc giống nút */
 }
 
 /* Đảm bảo nội dung của nút bị mờ khi vô hiệu hóa */
 button:disabled span,
 button:disabled p {
-		color: rgba(255, 255, 255, 0.5); /* Làm mờ nội dung bên trong */
+  color: rgba(255, 255, 255, 0.5);
+  /* Làm mờ nội dung bên trong */
 }
 
 
 .result {
-	margin-top: 20px;
+  margin-top: 20px;
 }
 
 .warning {
-	color: red;
-	font-weight: bold;
+  color: red;
+  font-weight: bold;
 }
 
 table {
-	margin-top: 20px;
-	width: 100%;
-	border: 1px solid black;
-	border-collapse: collapse;
-	text-align: center;
+  margin-top: 20px;
+  width: 100%;
+  border: 1px solid black;
+  border-collapse: collapse;
+  text-align: center;
 }
 
 table th,
 table td {
-	border: 1px solid black;
-	padding: 10px;
+  border: 1px solid black;
+  padding: 10px;
 }
 
 table th {
-	background-color: #f2f2f2;
+  background-color: #f2f2f2;
 }
 
 .select-group {
-		display: flex;
+  display: flex;
 }
 
 .select-group button {
-	flex: 1;
-	margin: 10px 0;
-	padding: 10px 0;
-	border: 1px solid #ccc;
-	background-color: #f5f5f5;
-	cursor: pointer;
-	font-size: 16px;
-	color: #000;
+  flex: 1;
+  margin: 10px 0;
+  padding: 10px 0;
+  border: 1px solid #ccc;
+  background-color: #f5f5f5;
+  cursor: pointer;
+  font-size: 16px;
+  color: #000;
 }
 
 .select-group button:first-child {
-	border-radius: 5px 0 0 5px;
+  border-radius: 5px 0 0 5px;
 }
 
 .select-group button:last-child {
-	border-radius: 0 5px 5px 0;
-	border-left: none;
+  border-radius: 0 5px 5px 0;
+  border-left: none;
 }
 
 .select-group button.active {
-	background-color: #1bb193;
-	color: #fff;
+  background-color: #1bb193;
+  color: #fff;
 }
 
 .age-days-group.error-border,
@@ -420,81 +431,85 @@ table th {
 .weight-group.error-border,
 .height-group.error-border,
 .gender-group.error-border {
-		border: 1.5px dashed red; /* Viền nét đứt màu đỏ */
-		padding: 5px 5px 0px 5px;
-		border-radius: 5px;
-		margin-bottom: 5px;
-		background-color: rgba(255, 0, 0, 0.07); /* Nền đỏ nhạt (7% opacity) */
-		transition: border 0.3s ease, background-color 0.3s ease; /* Hiệu ứng mượt */
+  border: 1.5px dashed red;
+  /* Viền nét đứt màu đỏ */
+  padding: 5px 5px 0px 5px;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  background-color: rgba(255, 0, 0, 0.07);
+  /* Nền đỏ nhạt (7% opacity) */
+  transition: border 0.3s ease, background-color 0.3s ease;
+  /* Hiệu ứng mượt */
 }
 
 
 @media only screen and (max-width: 768px) {
-	.overlay {
-		position: fixed;
-		top: 50px;
-		/* Phía dưới thanh header */
-		left: 0;
-		width: 100%;
-		height: calc(100% - 50px);
-		background-color: rgba(0, 0, 0, 0.5);
-		/* Màu tối */
-		z-index: 150;
-		display: none;
-		/* Ban đầu không hiển thị */
-		transition: 0.5s;
-	}
+  .overlay {
+    position: fixed;
+    top: 50px;
+    /* Phía dưới thanh header */
+    left: 0;
+    width: 100%;
+    height: calc(100% - 50px);
+    background-color: rgba(0, 0, 0, 0.5);
+    /* Màu tối */
+    z-index: 150;
+    display: none;
+    /* Ban đầu không hiển thị */
+    transition: 0.5s;
+  }
 
-	.sidebar-open #myOverlay {
-		display: block;
-	}
+  .sidebar-open #myOverlay {
+    display: block;
+  }
 
-	.sidebar {
-		width: 250px;
-		position: fixed;
-		top: 50px;
-		left: -250px;
-		transition: left 0.3s ease;
-	}
+  .sidebar {
+    width: 250px;
+    position: fixed;
+    top: 50px;
+    left: -250px;
+    transition: left 0.3s ease;
+  }
 
-	body.sidebar-open .sidebar {
-		left: 0;
-	}
+  body.sidebar-open .sidebar {
+    left: 0;
+  }
 
-	#main {
-		margin-left: 0;
-	}
+  #main {
+    margin-left: 0;
+  }
 
-	.container_of_content {
-		flex-direction: column;
-		align-items: center;
-		padding: 0 10px;
-		box-sizing: border-box;
-	}
+  .container_of_content {
+    flex-direction: column;
+    align-items: center;
+    padding: 0 10px;
+    box-sizing: border-box;
+  }
 
-	.calculation-box {
-		order: 1;
-	}
-	.result-box-zscore,
-	.description-box {
-		order: 2;
-	}
+  .calculation-box {
+    order: 1;
+  }
+
+  .result-box-zscore,
+  .description-box {
+    order: 2;
+  }
 
 }
 
 /* Đối với màn hình lớn hơn, sidebar vẫn sẽ đẩy nội dung */
 @media only screen and (min-width: 769px) {
-	.sidebar {
-		width: 0;
-		left: 0;
-	}
+  .sidebar {
+    width: 0;
+    left: 0;
+  }
 
-	body.sidebar-open .sidebar {
-		width: 250px;
-		/* Sidebar sẽ đẩy nội dung sang phải */
-	}
+  body.sidebar-open .sidebar {
+    width: 250px;
+    /* Sidebar sẽ đẩy nội dung sang phải */
+  }
 
-	body.sidebar-open #main {
-		margin-left: 250px;
-	}
+  body.sidebar-open #main {
+    margin-left: 250px;
+  }
 }
